[gd_scene load_steps=8 format=4 uid="uid://ofc4w6qbybja"]

[ext_resource type="Script" path="res://Player.gd" id="1_551dw"]
[ext_resource type="Texture2D" uid="uid://3lbad4ppcyd2" path="res://16x16_rect.png" id="1_i0gj7"]
[ext_resource type="Script" path="res://pause.gd" id="3_hxt36"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqphe"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aftbe"]
size = Vector2(56, 12)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c1l73"]
texture = ExtResource("1_i0gj7")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_myw50"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_c1l73")

[node name="Map" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("1_551dw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_vqphe")

[node name="Rect" type="Sprite2D" parent="Player"]
texture = ExtResource("1_i0gj7")

[node name="Shooting Area Pivot" type="Node2D" parent="Player"]

[node name="Shooting Area" type="Area2D" parent="Player/Shooting Area Pivot"]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Shooting Area Pivot/Shooting Area"]
position = Vector2(37, 0)
shape = SubResource("RectangleShape2D_aftbe")

[node name="Tile Layers" type="Node2D" parent="."]

[node name="Base" type="TileMapLayer" parent="Tile Layers"]
tile_map_data = PackedByteArray("AAD//yEAAAAAAAAAAAAAACEAAAAAAAAAAAABACEAAAAAAAAAAAACACEAAAAAAAAAAAADACEAAAAAAAAAAAAEACEAAAAAAAAAAAAFACEAAAAAAAAAAAAGACEAAAAAAAAAAAAHACEAAAAAAAAAAAAIACEAAAAAAAAAAAAJACEAAAAAAAAAAAAKACEAAAAAAAAAAAALACEAAAAAAAAAAAAMACEAAAAAAAAAAAANACEAAAAAAAAAAAAOACEAAAAAAAAAAAAPACEAAAAAAAAAAAAQACEAAAAAAAAAAAARACEAAAAAAAAAAAASACEAAAAAAAAAAAATACEAAAAAAAAAAAAUACEAAAAAAAAAAAAVACEAAAAAAAAAAAAWACEAAAAAAAAAAAAXACEAAAAAAAAAAAAYACEAAAAAAAAAAAAZACEAAAAAAAAAAAAaACEAAAAAAAAAAAAbACEAAAAAAAAAAAAcACEAAAAAAAAAAAAdACEAAAAAAAAAAAAeACEAAAAAAAAAAAAfACEAAAAAAAAAAAAgACEAAAAAAAAAAAAhACEAAAAAAAAAAAAiACEAAAAAAAAAAAAjACEAAAAAAAAAAAAkACEAAAAAAAAAAAAlACEAAAAAAAAAAAAmACEAAAAAAAAAAAAnACEAAAAAAAAAAAAoACEAAAAAAAAAAAApACEAAAAAAAAAAAAqACEAAAAAAAAAAAArACEAAAAAAAAAAAAsACEAAAAAAAAAAAAtACEAAAAAAAAAAAAuACEAAAAAAAAAAAAvACEAAAAAAAAAAAAwACEAAAAAAAAAAAAxACEAAAAAAAAAAAAyACEAAAAAAAAAAAAzACEAAAAAAAAAAAA0ACEAAAAAAAAAAAA1ACEAAAAAAAAAAAA2ACEAAAAAAAAAAAA3ACEAAAAAAAAAAAA4ACEAAAAAAAAAAAA5ACEAAAAAAAAAAAA6ACEAAAAAAAAAAAA7ACEAAAAAAAAAAAA8ACEAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_myw50")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Pause" type="Node" parent="UI"]
script = ExtResource("3_hxt36")

[node name="PausePanel" type="Panel" parent="UI/Pause"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Pause/PausePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "Game Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Pause/PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -63.5
offset_right = 63.5
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="UI/Pause/PausePanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume Game"

[node name="Button2" type="Button" parent="UI/Pause/PausePanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[connection signal="pressed" from="UI/Pause/PausePanel/VBoxContainer/Button" to="UI/Pause" method="_on_button_pressed"]
[connection signal="pressed" from="UI/Pause/PausePanel/VBoxContainer/Button2" to="UI/Pause" method="_on_button_2_pressed"]
